# Rust-Password-Manager

./: .gitignore  Cargo.toml  README.md  db.json
assets/readme/: demo.webm
src/: error.rs  lib.rs  main.rs  vault.rs
src/cli/: commands.rs  mod.rs
src/crypto/: cipher.rs  kdf.rs  mod.rs
src/security/: memory.rs
src/ui/: tui.rs
src/vault/: entry.rs  mod.rs  store.rs
tests/: vault_roundtrip.rs
