[package]
name = "pass-manager"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = "0.5"
arboard = "3.4"
chacha20poly1305 = "0.10"
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.29"
fuzzy-matcher = "0.3"
hex = "0.4"
rand = "0.8"
ratatui = "0.29"
rpassword = "7.3"
secrecy = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3.13"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
zeroize = "1"
